Hoffentlich nur der Code

--- a/main.kv
+++ b/main.kv
@@ -4,15 +4,17 @@
 
 
 FloatLayout:
-    ScreenManager:
-        id: screen_manager
-        Home:
-            name: 'home'
-            id: home
 
-        SoloPlayer:
-            name: 'solo'
-            id: solo
-        Multiplayer:
-            name: 'poly'
-            id: poly
+        ScreenManager:
+                id: screen_manager
+                Home:
+                        name: 'home'
+                        id: home
+
+                Soloplayer:
+                        name: 'solo'
+                        id: solo
+
+                Multiplayer:
+                        name: 'poly'
+                        id: poly
